agregue parrafos e hice cambios de estilos y texto en parrafo

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,12 +7,13 @@
         <div id="container">
             <div id="cabecera">
                 Hyperblog
-                <span id="tagline">Tu blog de confianza</span>
+                <span id="tagline">Tu blog maestro</span>
             </div>
             <div id="post">
             <h1>Aqui vamos a hacer un blog post</h1>
             <p>Y este es el parrafo de inicio</p>
             <p>Y este es el parrafo de finalizacion</p>
+            <p>YSuscribete y dale like</p>
             </div>
         </div>
     </body>
