cambio a entidades html en vez de tildes

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
                 <span id="tagline">Tu blog de cabecera</span>
             </div>
             <div id="post">
-            <h1>Aquí vamos a hacer un blog post</h1>
+            <h1>Aqu&iacute; vamos a hacer un blog post</h1>
             <p>Y este es el parrafo de inicio</p>
             <p>Y este es el parrafo de finalizacion</p>
             <p>Suscribete y dale like</p>
