--- a/blogpost.html
+++ b/blogpost.html
@@ -14,7 +14,7 @@
             <h1>Aqu&iacute; vamos a hacer un blog post</h1>
             <p>Y este es el parrafo de inicio</p>
             <p>Y este es el parrafo de finalizacion</p>
-            <p>Suscribete y dale like</p>
+            <p>Suscribete y dale like :D</p>
             </div>
         <div id="footer">
             Hecho con amor en casa
