--- a/blogpost.html
+++ b/blogpost.html
@@ -13,7 +13,7 @@
             <div id="post">
             <h1>Aqu&iacute; vamos a hacer un blog post</h1>
             <p>Y este es el parrafo de inicio</p>
-            <p>Y este es el parrafo de finalizacion</p>
+            <p>Y este es el parrafo de finalizaci&oacute;n</p>
             <p>Suscribete y dale like :D</p>
             </div>
         <div id="footer">
