--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
         <div id="container">
             <div id="cabecera">
                 <img id="logo" src="imagenes/logo.png" />
-                Hyperblog
+                Hyperblog 2.0 es un glog del futuro
                 <span id="tagline">Tu blog de cabecera</span>
             </div>
             <div id="post">
