cambio de palabra

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,14 +7,14 @@
         <div id="container">
             <div id="cabecera">
                 <img id="logo" src="imagenes/logo.png" />
-                Hyperblog 2.0 es un glog del futuro
+                Hyperblog 2.0 es un blog del futuro
                 <span id="tagline">Tu blog de cabecera</span>
             </div>
             <div id="post">
             <h1>Aqu&iacute; vamos a hacer un blog post</h1>
             <p>Y este es el parrafo de inicio</p>
-            <p>Y este es el parrafo de finalizaci&oacute;n</p>
-            <p>Suscribete y dale like :D</p>
+            <p>Y este es el parrafo de finalizaci&oacute;n/p>
+            <p>Suscribete y dale like</p>
             </div>
         <div id="footer">
             Hecho con amor en casa
