--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                <img id="logo" src="imagenes/logo.png" />
+                <img id="logo" src="https://i.imgur.com/Fk2ekRh.png" />
                 Hyperblog 2.0 es un blog del futuro
                 <span id="tagline">Tu blog de cabecera</span>
             </div>
